--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "dependencies": {
+    "discord.js": "^14.0.0",
+    "node-fetch": "^2.6.1"
+  },
   "scripts": {
     "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
   }
 }
+
